--- a/app/src/main/res/layout/activity_section_a1.xml
+++ b/app/src/main/res/layout/activity_section_a1.xml
@@ -13,7 +13,7 @@
     </data>
 
     <ScrollView
-        style="@style/i_scrollview"
+        style="@style/i_scrollviews"
         android:layoutDirection="rtl"
         android:textDirection="rtl">
 
