--- a/app/src/main/res/layout/activity_section_info_kmc.xml
+++ b/app/src/main/res/layout/activity_section_info_kmc.xml
@@ -14,7 +14,7 @@
     </data>
 
     <ScrollView
-        style="@style/i_scrollview"
+        style="@style/i_scrollviews"
         android:layoutDirection="rtl"
         android:textDirection="rtl">
 
@@ -35,6 +35,7 @@
                     <TextView
                         style="@style/textviews"
                         android:layout_width="0dp"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:text="@string/crataluka1" />
 
