--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,7 +50,6 @@
         <item name="android:layout_margin">2dp</item>
         <item name="android:padding">2dp</item>
         <item name="android:fadeScrollbars">false</item>
-        <item name="android:layoutDirection">rtl</item>
     </style>
 
     <!-- Irfan Textview  -->
@@ -80,7 +79,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:background">@color/colorPrimary</item>
-        <!--        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>-->
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">20sp</item>
@@ -96,7 +94,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:textColor">@color/colorPrimary</item>
-        <!--        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>-->
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
         <item name="android:background">@android:color/white</item>
         <item name="android:textSize">20sp</item>
@@ -319,7 +316,7 @@
         <item name="android:background">@color/white</item>
         <!--        <item name="android:button">@color/colorPrimary</item>-->
         <item name="android:elevation">1dp</item>
-        <item name="android:layout_marginBottom">1dp</item>
+        <item name="android:layout_margin">1dp</item>
         <item name="android:padding">10dp</item>
     </style>
 
