--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -176,7 +176,7 @@
         <item name="android:layout_marginTop">15dp</item>
         <item name="android:layout_marginBottom">15dp</item>
         <item name="android:layout_marginLeft">10dp</item>-->
-        <item name="android:layout_margin">8dp</item>-->
+        <item name="android:layout_margin">6dp</item>-->
         <item name="android:textColorHint">@color/black_overlay</item>
         <item name="android:background">@drawable/et_style</item>
         <item name="android:inputType">textPostalAddress</item>
@@ -310,14 +310,14 @@
     </style>
 
     <style name="radiobuttons" parent="Widget.AppCompat.CompoundButton.RadioButton">
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:background">@color/white</item>
         <!--        <item name="android:button">@color/colorPrimary</item>-->
         <item name="android:elevation">1dp</item>
         <item name="android:layout_margin">1dp</item>
-        <item name="android:padding">10dp</item>
+        <item name="android:padding">12dp</item>
     </style>
 
     <style name="radiobutton" parent="Widget.AppCompat.CompoundButton.RadioButton">
@@ -334,13 +334,14 @@
 
 
     <style name="checkbox" parent="Widget.AppCompat.CompoundButton.CheckBox">
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@color/white</item>
+        <item name="android:foreground">?android:attr/selectableItemBackground</item>
         <item name="android:elevation">1dp</item>
-        <item name="android:layout_marginBottom">1dp</item>
-        <item name="android:padding">15dp</item>
+        <item name="android:layout_margin">1dp</item>
+        <item name="android:padding">12dp</item>
     </style>
 
     <style name="checkbox1" parent="android:Widget.Material.Light.CompoundButton.CheckBox">
@@ -436,7 +437,7 @@
         <item name="android:layout_height">40dp</item>
         <item name="android:textAlignment">center</item>
         <item name="android:padding">10dp</item>
-        <item name="android:layout_margin">10dp</item>
+        <item name="android:layout_margin">8dp</item>
     </style>
 
     <style name="SpinnerTextViewItem" parent="@android:style/Widget.TextView">
