--- a/app/src/main/res/layout/activity_section_a_form0.xml
+++ b/app/src/main/res/layout/activity_section_a_form0.xml
@@ -20,11 +20,9 @@
 
         <LinearLayout
             android:id="@+id/form0Layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/vlinearlayout"
             android:animateLayoutChanges="true"
-            android:focusableInTouchMode="true"
-            android:orientation="vertical">
+            android:focusableInTouchMode="true">
 
 
             <!--  Taluka Spinner -->
@@ -36,6 +34,7 @@
 
                     <TextView
                         style="@style/textviews"
+                        android:layout_height="match_parent"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:text="@string/crataluka" />
@@ -50,6 +49,7 @@
 
             </android.support.v7.widget.CardView>
 
+
             <!--  Union Council UC Spinner -->
             <android.support.v7.widget.CardView
                 android:id="@+id/cvcrauc"
@@ -59,6 +59,7 @@
 
                     <TextView
                         style="@style/textviews"
+                        android:layout_height="match_parent"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:text="@string/cruc" />
@@ -73,6 +74,7 @@
 
             </android.support.v7.widget.CardView>
 
+
             <!--  Village Spinner  -->
             <android.support.v7.widget.CardView
                 android:id="@+id/cvcrvillage"
@@ -82,6 +84,7 @@
 
                     <TextView
                         style="@style/textviews"
+                        android:layout_height="match_parent"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:text="@string/crvillage" />
@@ -157,6 +160,7 @@
 
                     <TextView
                         style="@style/textviews"
+                        android:layout_height="match_parent"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:text="@string/kapr01" />
@@ -166,7 +170,7 @@
                         style="@style/EditTextNum"
                         android:layout_width="0dp"
                         android:layout_weight="1"
-                        android:hint="XXX"
+                        android:hint="###"
                         android:maxLength="3"
                         app:maxValue="999"
                         app:minValue="1"
@@ -189,6 +193,7 @@
 
                     <TextView
                         style="@style/textviews"
+                        android:layout_height="match_parent"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:text="@string/kapr03" />
@@ -207,17 +212,13 @@
 
             <LinearLayout
                 android:id="@+id/fldGrpcra04"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
+                style="@style/vlinearlayout"
                 android:visibility="gone"
                 tools:visibility="visible">
 
                 <LinearLayout
                     android:id="@+id/recruitmentLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
+                    style="@style/vlinearlayout"
                     android:visibility="gone"
                     tools:visibility="visible">
 
@@ -229,6 +230,7 @@
 
                             <TextView
                                 style="@style/textviews"
+                                android:layout_height="match_parent"
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
                                 android:text="@string/kapr04" />
@@ -281,6 +283,7 @@
 
                             <TextView
                                 style="@style/textviews"
+                                android:layout_height="match_parent"
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
                                 android:text="@string/kapr06" />
@@ -304,6 +307,7 @@
 
                             <TextView
                                 style="@style/textviews"
+                                android:layout_height="match_parent"
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
                                 android:text="@string/kapr07" />
@@ -327,6 +331,7 @@
 
                             <TextView
                                 style="@style/textviews"
+                                android:layout_height="match_parent"
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
                                 android:text="@string/kapr08" />
@@ -350,6 +355,7 @@
 
                             <TextView
                                 style="@style/textviews"
+                                android:layout_height="match_parent"
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
                                 android:text="@string/kapr09" />
@@ -373,6 +379,7 @@
 
                             <TextView
                                 style="@style/textviews"
+                                android:layout_height="match_parent"
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
                                 android:text="@string/kapr10" />
@@ -402,6 +409,7 @@
 
                             <TextView
                                 style="@style/textviews"
+                                android:layout_height="match_parent"
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
                                 android:text="@string/kapr11" />
@@ -483,9 +491,7 @@
 
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
+                    style="@style/vlinearlayout"
                     android:visibility='@{kapr12b.checked? View.VISIBLE : View.GONE}'>
 
 
@@ -555,6 +561,7 @@
 
                             <TextView
                                 style="@style/textviews"
+                                android:layout_height="match_parent"
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
                                 android:text="@string/kapr14" />
@@ -572,41 +579,34 @@
 
                     </android.support.v7.widget.CardView>
 
+
                 </LinearLayout>
 
 
                 <LinearLayout
                     android:id="@+id/fldGrpbtn"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingTop="32dp">
+                    style="@style/hlinearlayout"
+                    android:layout_margin="5dp">
 
                     <Button
                         android:id="@+id/btnNext"
+                        style="@style/buttons"
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="4dp"
                         android:layout_weight="1"
                         android:background="@android:color/holo_green_light"
                         android:onClick="@{() -> callback.BtnContinue()}"
-                        android:text="@string/nextSection"
-                        android:textColor="@color/white"
-                        android:textSize="24sp" />
+                        android:text="@string/nextSection" />
 
                     <Button
                         android:id="@+id/btnEnd"
+                        style="@style/buttons"
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="4dp"
                         android:layout_weight="1"
                         android:background="@android:color/holo_red_light"
                         android:onClick="@{() -> callback.BtnEnd()}"
                         android:text="@string/endForm"
-                        android:textColor="@color/white"
-                        android:textSize="24sp"
-                        android:textStyle="bold"
-                        android:visibility="gone" />
+                        android:visibility="gone"
+                        tools:visibility="visible" />
 
                 </LinearLayout>
 
