--- a/app/src/main/res/layout/activity_section_a1.xml
+++ b/app/src/main/res/layout/activity_section_a1.xml
@@ -1959,24 +1959,25 @@
 
             <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
             <LinearLayout
+                android:id="@+id/fldGrpbtn"
                 style="@style/hlinearlayout"
-                android:layout_marginTop="20dp">
+                android:layout_margin="5dp">
 
                 <Button
-                    android:id="@+id/btn_Continue"
+                    android:id="@+id/btnNext"
                     style="@style/buttons"
                     android:layout_width="0dp"
                     android:layout_weight="1"
-                    android:background="#1ed61e"
+                    android:background="@android:color/holo_green_light"
                     android:onClick="@{() -> callback.BtnContinue()}"
                     android:text="@string/nextSection" />
 
                 <Button
-                    android:id="@+id/btn_End"
+                    android:id="@+id/btnEnd"
                     style="@style/buttons"
                     android:layout_width="0dp"
                     android:layout_weight="1"
-                    android:background="@color/red"
+                    android:background="@android:color/holo_red_light"
                     android:onClick="@{() -> callback.BtnEnd()}"
                     android:text="@string/end_interview" />
 
