--- a/app/src/main/res/layout/activity_section_a_form1.xml
+++ b/app/src/main/res/layout/activity_section_a_form1.xml
@@ -13,7 +13,10 @@
     </data>
 
 
-    <ScrollView style="@style/i_scrollview">
+    <ScrollView
+        style="@style/i_scrollview"
+        android:layoutDirection="rtl"
+        android:textDirection="rtl">
 
         <LinearLayout style="@style/vlinearlayout">
 
@@ -49,6 +52,7 @@
 
                         <TextView
                             style="@style/textviews"
+                            android:layout_height="match_parent"
                             android:layout_width="0dp"
                             android:layout_weight="1"
                             android:text="@string/kf1b01" />
@@ -179,9 +183,7 @@
 
                             <TextView
                                 style="@style/textviews"
-                                android:text="@string/kf1b04"
-                                android:textSize="23sp"
-                                android:textStyle="bold" />
+                                android:text="@string/kf1b04" />
 
                         </LinearLayout>
 
@@ -194,11 +196,8 @@
                         <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
-                                style="@style/textviews"
-                                android:background="@color/grayOverlay"
-                                android:text="@string/kf1b04_h1"
-                                android:textSize="20sp"
-                                android:textStyle="bold" />
+                                style="@style/textviewsh"
+                                android:text="@string/kf1b04_h1" />
 
                         </LinearLayout>
 
@@ -401,11 +400,8 @@
                         <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
-                                style="@style/textviews"
-                                android:background="@color/grayOverlay"
-                                android:text="@string/kf1b04_h2"
-                                android:textSize="20sp"
-                                android:textStyle="bold" />
+                                style="@style/textviewsh"
+                                android:text="@string/kf1b04_h2" />
 
                         </LinearLayout>
 
@@ -822,9 +818,7 @@
 
                                 <TextView
                                     style="@style/textviews"
-                                    android:text="@string/kf1b05"
-                                    android:textSize="23sp"
-                                    android:textStyle="bold" />
+                                    android:text="@string/kf1b05" />
 
                             </LinearLayout>
 
@@ -839,11 +833,8 @@
                         <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
-                                style="@style/textviews"
-                                android:background="@color/grayOverlay"
-                                android:text="@string/kf1b05_h1"
-                                android:textSize="20sp"
-                                android:textStyle="bold" />
+                                style="@style/textviewsh"
+                                android:text="@string/kf1b05_h1" />
 
                         </LinearLayout>
 
@@ -1151,7 +1142,7 @@
                         <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
-                                style="@style/textviewsh"
+                                style="@style/textviews"
                                 android:text="@string/kf1b07" />
 
                             <RadioGroup
@@ -1370,40 +1361,33 @@
 
             </LinearLayout>
 
+
             <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
             <LinearLayout
                 android:id="@+id/fldGrpbtn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="32dp">
+                style="@style/hlinearlayout"
+                android:layout_margin="5dp">
 
                 <Button
                     android:id="@+id/btnNext"
+                    style="@style/buttons"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_green_light"
                     android:onClick="@{() -> callback.BtnContinue()}"
-                    android:text="@string/nextSection"
-                    android:textColor="@color/white"
-                    android:textSize="24sp" />
+                    android:text="@string/nextSection" />
 
                 <Button
                     android:id="@+id/btnEnd"
+                    style="@style/buttons"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_red_light"
                     android:onClick="@{() -> callback.BtnEnd()}"
-                    android:text="@string/endForm"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
+                    android:text="@string/endForm" />
 
             </LinearLayout>
+
 
         </LinearLayout>
 
