--- a/app/src/main/res/layout/activity_section_b_form2.xml
+++ b/app/src/main/res/layout/activity_section_b_form2.xml
@@ -31,6 +31,7 @@
 
                         <TextView
                             style="@style/textviews"
+                            android:layout_height="match_parent"
                             android:layout_width="0dp"
                             android:layout_weight="1"
                             android:text="@string/kf2b01" />
@@ -60,6 +61,7 @@
 
                         <TextView
                             style="@style/textviews"
+                            android:layout_height="match_parent"
                             android:layout_width="0dp"
                             android:layout_weight="1"
                             android:text="@string/kf2b02" />
@@ -89,6 +91,7 @@
 
                         <TextView
                             style="@style/textviews"
+                            android:layout_height="match_parent"
                             android:layout_width="0dp"
                             android:layout_weight="1"
                             android:text="@string/kf2b03" />
@@ -116,6 +119,7 @@
 
                         <TextView
                             style="@style/textviews"
+                            android:layout_height="match_parent"
                             android:layout_width="0dp"
                             android:layout_weight="1"
                             android:text="@string/kf2b04" />
@@ -359,24 +363,36 @@
 
                         <LinearLayout style="@style/hlinearlayout">
 
+                            <TextView
+                                style="@style/textviews"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:text="@string/weeks" />
+
                             <com.edittextpicker.aliazaz.EditTextPicker
                                 android:id="@+id/kf2b10d"
                                 style="@style/EditTextNum"
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
-                                android:hint="@string/weeks"
+                                android:hint="##"
                                 android:maxLength="2"
                                 android:text='@{kf2b09a.checked ? kf2b10d.getText().toString : ""}'
                                 app:maxValue="42"
                                 app:minValue="0"
                                 app:type="range" />
 
+                            <TextView
+                                style="@style/textviews"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:text="@string/months" />
+
                             <com.edittextpicker.aliazaz.EditTextPicker
                                 android:id="@+id/kf2b10m"
                                 style="@style/EditTextNum"
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
-                                android:hint="@string/months"
+                                android:hint="#"
                                 android:maxLength="1"
                                 android:text='@{kf2b09a.checked ? kf2b10m.getText().toString : ""}'
                                 app:maxValue="9"
@@ -624,38 +640,30 @@
 
             </LinearLayout>
 
+
             <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
             <LinearLayout
                 android:id="@+id/fldGrpbtn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="32dp">
+                style="@style/hlinearlayout"
+                android:layout_margin="5dp">
 
                 <Button
                     android:id="@+id/btnNext"
+                    style="@style/buttons"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_green_light"
                     android:onClick="@{() -> callback.BtnContinue()}"
-                    android:text="@string/nextSection"
-                    android:textColor="@color/white"
-                    android:textSize="24sp" />
+                    android:text="@string/nextSection" />
 
                 <Button
                     android:id="@+id/btnEnd"
+                    style="@style/buttons"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_red_light"
                     android:onClick="@{() -> callback.BtnEnd()}"
-                    android:text="@string/endForm"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
+                    android:text="@string/endForm" />
 
             </LinearLayout>
 
