--- a/app/src/main/res/layout/activity_section_c_form2.xml
+++ b/app/src/main/res/layout/activity_section_c_form2.xml
@@ -31,6 +31,7 @@
 
                         <TextView
                             style="@style/textviews"
+                            android:layout_height="match_parent"
                             android:layout_width="0dp"
                             android:layout_weight="1"
                             android:text="@string/kf2c01" />
@@ -62,6 +63,7 @@
 
                         <TextView
                             style="@style/textviews"
+                            android:layout_height="match_parent"
                             android:layout_width="0dp"
                             android:layout_weight="1"
                             android:text="@string/kf2c02" />
@@ -91,6 +93,7 @@
 
                         <TextView
                             style="@style/textviews"
+                            android:layout_height="match_parent"
                             android:layout_width="0dp"
                             android:layout_weight="1"
                             android:text="@string/kf2c03" />
@@ -513,32 +516,25 @@
             <LinearLayout
                 android:id="@+id/fldGrpbtn"
                 style="@style/hlinearlayout"
-                android:paddingTop="16dp">
+                android:layout_margin="5dp">
 
                 <Button
                     android:id="@+id/btnNext"
+                    style="@style/buttons"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_green_light"
                     android:onClick="@{() -> callback.BtnContinue()}"
-                    android:text="@string/nextSection"
-                    android:textColor="@color/white"
-                    android:textSize="24sp" />
+                    android:text="@string/nextSection" />
 
                 <Button
                     android:id="@+id/btnEnd"
+                    style="@style/buttons"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_red_light"
                     android:onClick="@{() -> callback.BtnEnd()}"
-                    android:text="@string/endForm"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
+                    android:text="@string/endForm" />
 
             </LinearLayout>
 
